correct heading font weight and letter spacing

--- a/app/assets/stylesheets/bootstrap_variables.scss
+++ b/app/assets/stylesheets/bootstrap_variables.scss
@@ -44,7 +44,7 @@ $border-color: $black;
 $font-family-sans-serif: "Roboto Condensed", system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", "Noto Sans", "Liberation Sans", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 
 $headings-font-family: "Kanit";
-$headings-font-weight: 600;
+$headings-font-weight: 800;
 
 $code-color: $purple;
 
